[gd_scene load_steps=15 format=3 uid="uid://pg7u1mv1yhwo"]

[ext_resource type="Script" path="res://Battle/BattleSystem.gd" id="1_7ufeq"]
[ext_resource type="Texture2D" uid="uid://dxoccwtexinns" path="res://Art/BEACHBG5.png" id="2_gje1a"]
[ext_resource type="Texture2D" uid="uid://dnadalelko0ik" path="res://Art/blueface1.png" id="2_tfhtf"]
[ext_resource type="Texture2D" uid="uid://bbrnbm4nnq2yw" path="res://Art/altface2.png" id="3_bf53c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yx05h"]
bg_color = Color(0, 0, 0, 0.490196)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_66mq8"]
bg_color = Color(0.67451, 0.184314, 0.0862745, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hkvvg"]
bg_color = Color(0.00392157, 0.00392157, 0.00392157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yuvv4"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_34eqc"]
bg_color = Color(0.423529, 0.0980392, 0.12549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xjbkb"]
bg_color = Color(0.941176, 0, 0.317647, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xsk28"]
bg_color = Color(0.129412, 0.129412, 0.129412, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[sub_resource type="Animation" id="Animation_d635j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_j4w21"]
resource_name = "SizeChange1"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.3, 1.3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2wi84"]
_data = {
"RESET": SubResource("Animation_d635j"),
"SizeChange1": SubResource("Animation_j4w21")
}

[node name="BattleSystem" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_7ufeq")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.82
mouse_filter = 2
texture = ExtResource("2_gje1a")

[node name="TopLabel" type="Label" parent="Background"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
horizontal_alignment = 1

[node name="Player" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -399.0
offset_top = -598.0
offset_right = 399.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="PlayerPanel" type="Panel" parent="Player"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yx05h")

[node name="HBoxContainer" type="HBoxContainer" parent="Player/PlayerPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -76.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 6

[node name="CenterContainer" type="CenterContainer" parent="Player/PlayerPanel/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Player/PlayerPanel/HBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Healthbar" type="ProgressBar" parent="Player/PlayerPanel/HBoxContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 16)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_66mq8")
theme_override_styles/fill = SubResource("StyleBoxFlat_hkvvg")
value = 50.0
show_percentage = false

[node name="Health" type="Label" parent="Player/PlayerPanel/HBoxContainer/CenterContainer/VBoxContainer/Healthbar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "HP: 5/10"
horizontal_alignment = 1

[node name="Emotion" type="Label" parent="Player/PlayerPanel/HBoxContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Emotion_placeholder"

[node name="Player_Name" type="Label" parent="Player/PlayerPanel/HBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Player"

[node name="Fight_button" type="Button" parent="Player/PlayerPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_yuvv4")
theme_override_styles/hover = SubResource("StyleBoxFlat_34eqc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xjbkb")
text = "Fight"

[node name="Flee_button" type="Button" parent="Player/PlayerPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_yuvv4")
theme_override_styles/hover = SubResource("StyleBoxFlat_34eqc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xjbkb")
text = "Flee"

[node name="Textbox" type="Panel" parent="Player/PlayerPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.41
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xsk28")

[node name="Text" type="Label" parent="Player/PlayerPanel/HBoxContainer/Textbox"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
autowrap_mode = 3

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 2
offset_left = 1.0
offset_top = 1.0
offset_right = 799.0
offset_bottom = 599.0
mouse_filter = 2
color = Color(0, 0, 0, 0.721569)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 1.0
offset_top = 1.0
offset_right = 799.0
offset_bottom = 599.0
mouse_filter = 2
texture = ExtResource("2_tfhtf")
expand_mode = 3
stretch_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_2wi84")
}

[node name="Altface2" type="Sprite2D" parent="."]
visible = false
position = Vector2(576.5, 295)
scale = Vector2(8.02098, 5.04)
texture = ExtResource("3_bf53c")

[connection signal="pressed" from="Player/PlayerPanel/HBoxContainer/Fight_button" to="." method="_on_fight_button_pressed"]
[connection signal="pressed" from="Player/PlayerPanel/HBoxContainer/Flee_button" to="." method="_on_flee_button_pressed"]
